<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.alpaca</groupId>
	<artifactId>auth-alpaca</artifactId>
	<version>2.0.0</version>
	<name>Multiple Auth API</name>
	<description>Spring Boot App that focuses on implementing multiple authentication methods using OAuth2 and JWT.</description>
	<url/>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Rogelio Olarte</name>
			<url>https://github.com/rogelioolarte</url>
			<email>rogelioolarte2222@gmail.com</email>
			<roles>
				<role>DEVELOPER</role>
				<role>MAINTAINER</role>
			</roles>
		</developer><developer>
			<name>Lewis Florez Renza</name>
			<url>https://github.com/gasperlf</url>
			<email>gasper_lf@hotmail.com</email>
			<roles>
				<role>ADVISOR</role>
				<role>REVIEWER</role>
			</roles>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:https://github.com/rogelioolarte/auth-alpaca.git</connection>
		<developerConnection>scm:git:ssh://github.com:rogelioolarte/auth-alpaca.git</developerConnection>
		<url>https://github.com/rogelioolarte/auth-alpaca</url>
		<tag>HEAD</tag>
	</scm>
	<properties>
        <sonar.organization>rogelioolarte</sonar.organization>
		<sonar.projectKey>rogelioolarte_auth-alpaca</sonar.projectKey>
		<java.version>25</java.version>
		<maven.compiler.args>--enable-preview</maven.compiler.args>
		<jjwt.version>0.13.0</jjwt.version>
		<spotless.version>3.0.0</spotless.version>
        <google-java-format.version>1.27.0</google-java-format.version>
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
		<uuid-generator.version>5.1.1</uuid-generator.version>
        <dotenv.version>3.2.0</dotenv.version>
        <bucket4j.version>8.10.1</bucket4j.version>
		<caffeine.version>3.2.3</caffeine.version>
		<bouncycastle.version>1.84</bouncycastle.version>
		<sonar.version>5.6.0.6792</sonar.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-h2console</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security-oauth2-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security-oauth2-client-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jjwt.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
			<version>${bouncycastle.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.uuid</groupId>
			<artifactId>java-uuid-generator</artifactId>
			<version>${uuid-generator.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.cdimascio</groupId>
			<artifactId>dotenv-java</artifactId>
			<version>${dotenv.version}</version>
		</dependency>
		<dependency>
			<groupId>com.bucket4j</groupId>
			<artifactId>bucket4j-core</artifactId>
			<version>${bucket4j.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
			<version>${caffeine.version}</version>
		</dependency>
	</dependencies>
	<profiles>
		<!-- Profile for Unit Tests -->
		<profile>
			<id>unit-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.12</version>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
								<phase>none</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- Profile for Integration Tests -->
		<profile>
			<id>integration-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco-maven-plugin.version}</version>
						<executions>
							<execution>
								<goals>
									<goal>prepare-agent</goal>
									<goal>report</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<phase>verify</phase>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<excludes>
										<exclude>**/DemoApplication.class</exclude>
										<exclude>**/DataServiceImpl.class</exclude>
										<exclude>**/entity/**</exclude>
										<exclude>**/model/**</exclude>
										<exclude>**/dto/**</exclude>
										<exclude>**/controller/**</exclude>
										<exclude>**/exception/**</exclude>
										<exclude>**/repository/**</exclude>
										<exclude>**/config/**</exclude>
										<exclude>**/utils/**</exclude>
									</excludes>
									<outputDirectory>${project.build.directory}/site-integration</outputDirectory>
								</configuration>
							</execution>
						</executions>
						<configuration>
							<rules>
								<rule>
									<element>PACKAGE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.80</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!-- Maven Compiler Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<id>default-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<annotationProcessorPaths>
								<path>
									<groupId>org.projectlombok</groupId>
									<artifactId>lombok</artifactId>
								</path>
							</annotationProcessorPaths>
						</configuration>
					</execution>
					<execution>
						<id>default-testCompile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<annotationProcessorPaths>
								<path>
									<groupId>org.projectlombok</groupId>
									<artifactId>lombok</artifactId>
								</path>
							</annotationProcessorPaths>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- SpringBoot Maven Plugin -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<!-- Spotless auto formatting -->
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>${spotless.version}</version>
				<configuration>
					<markdown>
						<includes>
							<include>**/*.md</include>
						</includes>
						<flexmark/>
					</markdown>
					<formats>
						<format>
							<includes>
								<include>*.json</include>
								<include>.gitattributes</include>
								<include>.gitignore</include>
							</includes>
                            <excludes>
                                <exclude>javadoc/**</exclude>
                            </excludes>
							<trimTrailingWhitespace/>
							<endWithNewline/>
							<indent>
								<tabs>true</tabs>
								<spacesPerTab>4</spacesPerTab>
							</indent>
						</format>
					</formats>
					<java>
						<googleJavaFormat>
                            <version>${google-java-format.version}</version>
							<style>AOSP</style>
							<reflowLongStrings>true</reflowLongStrings>
						</googleJavaFormat>
					</java>
				</configuration>
				<executions>
					<execution>
						<id>apply</id>
						<goals>
							<goal>apply</goal>
						</goals>
						<phase>compile</phase>
					</execution>
				</executions>
			</plugin>

			<!-- JaCoCo Plugin for unit and integration test coverage -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report-unit</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/Application.class</exclude>
								<exclude>**/DataServiceImpl.class</exclude>
								<exclude>**/entity/**</exclude>
								<exclude>**/model/**</exclude>
								<exclude>**/dto/**</exclude>
								<exclude>**/exception/**</exclude>
								<exclude>**/repository/**</exclude>
								<exclude>**/config/**</exclude>
								<exclude>**/utils/**</exclude>
							</excludes>
						</configuration>
					</execution>

					<execution>
						<id>prepare-agent-integration</id>
						<goals>
							<goal>prepare-agent-integration</goal>
						</goals>
					</execution>

					<execution>
						<id>report-integration</id>
						<phase>verify</phase>
						<goals>
							<goal>report-integration</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/DemoApplication.class</exclude>
								<exclude>**/DataServiceImpl.class</exclude>
								<exclude>**/entity/**</exclude>
								<exclude>**/model/**</exclude>
								<exclude>**/dto/**</exclude>
								<exclude>**/controller/**</exclude>
								<exclude>**/exception/**</exclude>
								<exclude>**/repository/**</exclude>
								<exclude>**/config/**</exclude>
								<exclude>**/utils/**</exclude>
								<exclude>**/security/**</exclude>
								<exclude>**/mapper/**</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Failsafe Plugin for Integration Tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<includes>
						<include>integration/**/*IT.java</include>
					</includes>
					<excludes>
						<exclude>unit/**</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- Surefire Plugin for Unit Tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>unit/**/*Test.java</include>
					</includes>
					<argLine>
						@{argLine}
						-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
						-Xshare:off -XX:+EnableDynamicAgentLoading
						--sun-misc-unsafe-memory-access=allow
					</argLine>
				</configuration>
			</plugin>

			<!-- Dependency plugin to resolve variables -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>